{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 4,
  "lineage": "c0b2c557-e979-8716-daad-5e428fc22079",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "tfer--PocDxinfraportal",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "access_logs.#": "1",
            "access_logs.0.bucket": "dxpf-alb-logs-singapore",
            "access_logs.0.enabled": "true",
            "access_logs.0.prefix": "dxpf/PocDxinfraportal",
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:loadbalancer/app/PocDxinfraportal/33679289b6794a08",
            "arn_suffix": "app/PocDxinfraportal/33679289b6794a08",
            "dns_name": "PocDxinfraportal-1919499970.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": "false",
            "enable_cross_zone_load_balancing": "true",
            "enable_deletion_protection": "true",
            "enable_http2": "true",
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:loadbalancer/app/PocDxinfraportal/33679289b6794a08",
            "idle_timeout": "60",
            "internal": "false",
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "PocDxinfraportal",
            "security_groups.#": "5",
            "security_groups.0": "sg-066cff47579adc6ec",
            "security_groups.1": "sg-0ad279f7c608e0792",
            "security_groups.2": "sg-0b8596d57d5da1109",
            "security_groups.3": "sg-0d0b7e4029a649675",
            "security_groups.4": "sg-0f6fe1f0cf3e67d6c",
            "subnet_mapping.#": "3",
            "subnet_mapping.0.allocation_id": "",
            "subnet_mapping.0.ipv6_address": "",
            "subnet_mapping.0.outpost_id": "",
            "subnet_mapping.0.private_ipv4_address": "",
            "subnet_mapping.0.subnet_id": "subnet-20bdbe69",
            "subnet_mapping.1.allocation_id": "",
            "subnet_mapping.1.ipv6_address": "",
            "subnet_mapping.1.outpost_id": "",
            "subnet_mapping.1.private_ipv4_address": "",
            "subnet_mapping.1.subnet_id": "subnet-3ca76e65",
            "subnet_mapping.2.allocation_id": "",
            "subnet_mapping.2.ipv6_address": "",
            "subnet_mapping.2.outpost_id": "",
            "subnet_mapping.2.private_ipv4_address": "",
            "subnet_mapping.2.subnet_id": "subnet-5c31233b",
            "subnets.#": "3",
            "subnets.0": "subnet-20bdbe69",
            "subnets.1": "subnet-3ca76e65",
            "subnets.2": "subnet-5c31233b",
            "tags.%": "5",
            "tags.Billing": "dxplatform",
            "tags.Owner": "DXInfra",
            "tags.Project": "dxplatform",
            "tags.Usage": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:loadbalancer/app/PocDxinfraportal/33679289b6794a08",
            "tags.application": "dxplatform-portal",
            "vpc_id": "vpc-8481afe3",
            "zone_id": "Z1LMS91P8CMLE5"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tfer--arn-003A-aws-003A-elasticloadbalancing-003A-ap-southeast-1-003A-768502287836-003A-listener-002F-app-002F-PocDxinfraportal-002F-33679289b6794a08-002F-02c05812d7d48138",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:listener/app/PocDxinfraportal/33679289b6794a08/02c05812d7d48138",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:768502287836:certificate/4a8f0357-b09d-4204-9084-f7282f39678d",
            "default_action": [
              {
                "authenticate_cognito": [
                  {
                    "authentication_request_extra_params": {},
                    "on_unauthenticated_request": "authenticate",
                    "scope": "openid",
                    "session_cookie_name": "AWSELBAuthSessionCookie",
                    "session_timeout": 604800,
                    "user_pool_arn": "arn:aws:cognito-idp:ap-southeast-1:768502287836:userpool/ap-southeast-1_HxhkZHuGI",
                    "user_pool_client_id": "7e48u7omo3g02ejefvj63lr122",
                    "user_pool_domain": "dx-infra"
                  }
                ],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "authenticate-cognito"
              },
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 2,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:targetgroup/PocDxinfraportalStaging-TG/2d5b72c990c0ea18",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:listener/app/PocDxinfraportal/33679289b6794a08/02c05812d7d48138",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:loadbalancer/app/PocDxinfraportal/33679289b6794a08",
            "port": 8080,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "timeouts": {
              "read": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tfer--arn-003A-aws-003A-elasticloadbalancing-003A-ap-southeast-1-003A-768502287836-003A-listener-002F-app-002F-PocDxinfraportal-002F-33679289b6794a08-002F-5ed849ab022bb889",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:listener/app/PocDxinfraportal/33679289b6794a08/5ed849ab022bb889",
            "certificate_arn": "arn:aws:acm:ap-southeast-1:768502287836:certificate/4a8f0357-b09d-4204-9084-f7282f39678d",
            "default_action": [
              {
                "authenticate_cognito": [
                  {
                    "authentication_request_extra_params": {},
                    "on_unauthenticated_request": "authenticate",
                    "scope": "openid",
                    "session_cookie_name": "AWSELBAuthSessionCookie",
                    "session_timeout": 604800,
                    "user_pool_arn": "arn:aws:cognito-idp:ap-southeast-1:768502287836:userpool/ap-southeast-1_HxhkZHuGI",
                    "user_pool_client_id": "4ju5plag5o7gfkt0pv9j57dmvl",
                    "user_pool_domain": "dx-infra"
                  }
                ],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "authenticate-cognito"
              },
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 2,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:targetgroup/PocDxinfraportal-TG/8b2017faf2b0985d",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:listener/app/PocDxinfraportal/33679289b6794a08/5ed849ab022bb889",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:loadbalancer/app/PocDxinfraportal/33679289b6794a08",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-2-2017-01",
            "timeouts": {
              "read": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "tfer--arn-003A-aws-003A-elasticloadbalancing-003A-ap-southeast-1-003A-768502287836-003A-listener-002F-app-002F-PocDxinfraportal-002F-33679289b6794a08-002F-d719904942485057",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:listener/app/PocDxinfraportal/33679289b6794a08/d719904942485057",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:listener/app/PocDxinfraportal/33679289b6794a08/d719904942485057",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:loadbalancer/app/PocDxinfraportal/33679289b6794a08",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": {
              "read": null
            }
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tfer--PocDxinfraportal-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:targetgroup/PocDxinfraportal-TG/8b2017faf2b0985d",
            "arn_suffix": "targetgroup/PocDxinfraportal-TG/8b2017faf2b0985d",
            "deregistration_delay": "300",
            "health_check.#": "1",
            "health_check.0.enabled": "true",
            "health_check.0.healthy_threshold": "5",
            "health_check.0.interval": "30",
            "health_check.0.matcher": "200",
            "health_check.0.path": "/",
            "health_check.0.port": "traffic-port",
            "health_check.0.protocol": "HTTP",
            "health_check.0.timeout": "5",
            "health_check.0.unhealthy_threshold": "2",
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:targetgroup/PocDxinfraportal-TG/8b2017faf2b0985d",
            "load_balancing_algorithm_type": "round_robin",
            "name": "PocDxinfraportal-TG",
            "port": "80",
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": "0",
            "stickiness.#": "1",
            "stickiness.0.cookie_duration": "86400",
            "stickiness.0.enabled": "false",
            "stickiness.0.type": "lb_cookie",
            "tags.%": "7",
            "tags.Billing": "dxplatform",
            "tags.Owner": "DXInfra",
            "tags.Project": "dxplatform",
            "tags.Usage": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:targetgroup/PocDxinfraportal-TG/8b2017faf2b0985d",
            "tags.Usage-tag-source": "dxpf-aws-resource-tagger",
            "tags.Usage-tag-update-time": "Mon Nov 28 02:15:53 IST 2022",
            "tags.application": "dxplatform-portal",
            "target_type": "instance",
            "vpc_id": "vpc-8481afe3"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tfer--PocDxinfraportalStaging-TG",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes_flat": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:targetgroup/PocDxinfraportalStaging-TG/2d5b72c990c0ea18",
            "arn_suffix": "targetgroup/PocDxinfraportalStaging-TG/2d5b72c990c0ea18",
            "deregistration_delay": "300",
            "health_check.#": "1",
            "health_check.0.enabled": "true",
            "health_check.0.healthy_threshold": "5",
            "health_check.0.interval": "30",
            "health_check.0.matcher": "200",
            "health_check.0.path": "/",
            "health_check.0.port": "traffic-port",
            "health_check.0.protocol": "HTTP",
            "health_check.0.timeout": "5",
            "health_check.0.unhealthy_threshold": "2",
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:targetgroup/PocDxinfraportalStaging-TG/2d5b72c990c0ea18",
            "load_balancing_algorithm_type": "round_robin",
            "name": "PocDxinfraportalStaging-TG",
            "port": "80",
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "slow_start": "0",
            "stickiness.#": "1",
            "stickiness.0.cookie_duration": "86400",
            "stickiness.0.enabled": "false",
            "stickiness.0.type": "lb_cookie",
            "tags.%": "7",
            "tags.Billing": "dxplatform",
            "tags.Owner": "DXInfra",
            "tags.Project": "dxplatform",
            "tags.Usage": "arn:aws:elasticloadbalancing:ap-southeast-1:768502287836:targetgroup/PocDxinfraportalStaging-TG/2d5b72c990c0ea18",
            "tags.Usage-tag-source": "dxpf-aws-resource-tagger",
            "tags.Usage-tag-update-time": "Mon Nov 28 02:15:54 IST 2022",
            "tags.application": "dxplatform-portal",
            "target_type": "instance",
            "vpc_id": "vpc-8481afe3"
          }
        }
      ]
    }
  ]
}